test_outputs/cli/anp_banp_blog_demo_focus_workload_myfoo,mybar_connlist_output.txt
0.0.0.0-255.255.255.255 => bar/mybar[Pod] : All Connections
bar/mybar[Pod] => 0.0.0.0-255.255.255.255 : All Connections
bar/mybar[Pod] => baz/mybaz[Pod] : All Connections
bar/mybar[Pod] => monitoring/mymonitoring[Pod] : All Connections
foo/myfoo[Pod] => 0.0.0.0-255.255.255.255 : All Connections
foo/myfoo[Pod] => baz/mybaz[Pod] : All Connections
foo/myfoo[Pod] => monitoring/mymonitoring[Pod] : All Connections
monitoring/mymonitoring[Pod] => foo/myfoo[Pod] : All Connections
