test_outputs/cli/exposure_acs-security-demos_connlist_output.txt
backend/checkout[Deployment] => backend/notification[Deployment] : TCP 8080
backend/checkout[Deployment] => backend/recommendation[Deployment] : TCP 8080
backend/checkout[Deployment] => payments/gateway[Deployment] : TCP 8080
backend/recommendation[Deployment] => backend/catalog[Deployment] : TCP 8080
backend/reports[Deployment] => backend/catalog[Deployment] : TCP 8080
backend/reports[Deployment] => backend/recommendation[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/checkout[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/recommendation[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/reports[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/shipping[Deployment] : TCP 8080
payments/gateway[Deployment] => payments/mastercard-processor[Deployment] : TCP 8080
payments/gateway[Deployment] => payments/visa-processor[Deployment] : TCP 8080
{ingress-controller} => frontend/asset-cache[Deployment] : TCP 8080
{ingress-controller} => frontend/webapp[Deployment] : TCP 8080

Exposure Analysis Result:
backend/checkout[Deployment] => entire-cluster : UDP 5353
backend/recommendation[Deployment] => entire-cluster : UDP 5353
backend/reports[Deployment] => entire-cluster : UDP 5353
entire-cluster => frontend/asset-cache[Deployment] : TCP 8080
entire-cluster => frontend/webapp[Deployment] : TCP 8080
frontend/webapp[Deployment] => entire-cluster : UDP 5353
payments/gateway[Deployment] => entire-cluster : UDP 5353
